--- a/frontend/dota-2-abilityle/src/index.css
+++ b/frontend/dota-2-abilityle/src/index.css
@@ -104,6 +104,16 @@ code {
   box-shadow: 0 6px 2px -2px black;
 }
 
+.loading-div {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 button {
   width: 20%;
